--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "i": "^0.3.6",
+    "install": "^0.13.0",
     "lodash": "^4.17.21",
+    "npm": "^7.11.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
