--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "cool-ascii-faces": "^1.3.4",
     "i": "^0.3.6",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
