--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "eject": "react-scripts eject",
     "heroku-postbuild": "npm run build"
   },
+  "engines": {
+    "npm": "5.6.0",
+    "node": "8.10.0"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
