--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm build"
+    "heroku-postbuild": "npm run build"
   },
   "engines": {
     "npm": "5.6.0",
