--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "check-node-version": "^4.1.0",
     "cool-ascii-faces": "^1.3.4",
     "i": "^0.3.6",
     "install": "^0.13.0",
@@ -31,8 +32,8 @@
     "heroku-postbuild": "npm run build"
   },
   "engines": {
-    "npm": "5.6.0",
-    "node": "8.10.0"
+    "npm": "6.14.12",
+    "node": "14.16.1"
   },
   "eslintConfig": {
     "extends": [
